Fixed: Truncating long text in the middle when it shouldn't be truncated
Closes #7413

--- a/frontend/src/Settings/Profiles/Release/ReleaseProfiles.css
+++ b/frontend/src/Settings/Profiles/Release/ReleaseProfiles.css
@@ -4,7 +4,7 @@
 }
 
 .addReleaseProfile {
-  composes: releaseProfile from '~./ReleaseProfileRow.css';
+  composes: releaseProfile from '~./ReleaseProfileItem.css';
 
   background-color: var(--cardAlternateBackgroundColor);
   color: var(--gray);
